<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg6">


    <ImageView
        android:layout_marginTop="180dp"
        android:id="@+id/imageview1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:src="@drawable/logo3"
        android:contentDescription="@string/todo" />

    <Button
        android:onClick="biografi"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lihat_biografi"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:onClick="sejarah"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:text="@string/seejarah"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/welcome_to_biografi_pendiri_muhamadiyah"
        android:textColor="#E4DFDF"
        android:textSize="50sp"
        android:textStyle="bold" />


</LinearLayout>