<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/c"
        >

        <TextView
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/igahmad"
            android:text="@string/sejarah_muhammadiyah"/>

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_below="@+id/igahmad"

            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image6"
            android:contentDescription="@string/judul" />

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_below="@id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/muhammadiyah_didirikan_di_kampung_kauman_yogyakarta_pada_8_dzulhijjah_1330h_atau_18_november_1912_oleh_muhammad_darwis_yang_kemudian_dikenal_dengan_kyai_haji_ahmad_dahlan_dilansir_dari_situs_resmi_muhammadiyah_setelah_kyai_haji_ahmad_dahlan_menunaikan_ibadah_haji_ke_tanah_suci_beliau_mulai_menyampaikan_benih_pembaruan_di_tanah_air_gagasan_pembaruan_itu_diperoleh_kyai_haji_ahmad_dahlan_setelah_berguru_kepada_ulama_ulama_indonesia_yang_bermukim_di_mekkah"/>


    </RelativeLayout>




</LinearLayout>